fix: 소제목에 핵심 내용 추가

--- a/src/content/post/어떤_개발자가_되고_싶은가.md
+++ b/src/content/post/어떤_개발자가_되고_싶은가.md
@@ -23,7 +23,7 @@ pubDate: 2025-03-06
 
 가장 큰 변화는 '소통' 능력이었습니다. 초기에는 주어진 태스크만 수행했다면, 이제는 기획 단계부터 관심을 가지고 참여하여 제품의 방향성에 대해 의견을 내거나 기획에 대한 이해도를 높이고 개발하는 것을 선호하는 것으로 변했습니다. PR 작성 시에도 단순히 코드만이 아닌, 작업 맥락과 의도를 상세히 공유하여 코드 리뷰에 더 많은 도움을 주고 받을 수 있었습니다.
 
-## 이상적인 개발자의 모습
+## 이상적인 개발자의 모습, '균형 잡힌 시야'를 가진 개발자가 되자
 
 개발자로 일하면서 많은 동료들을 만났고, 다양한 프로젝트를 경험했습니다. 그 과정에서 제가 그리는 이상적인 개발자의 모습이 조금씩 구체화되었습니다.
 
@@ -31,7 +31,7 @@ pubDate: 2025-03-06
 
 둘째로, '균형 잡힌 시야'를 가진 개발자가 되고 싶습니다. 기술적 완성도도 중요하지만, 비즈니스 가치와 사용자 경험도 똑같이 중요하니까요. 새로운 기술을 도입할 때도 "이게 정말 우리 팀과 서비스에 필요한가?"를 먼저 고민하는 사람이 되고 싶습니다.
 
-## 나의 목표
+## 나의 목표, 테크 리더로서의 역량 개발
 
 테크 리더로서의 역량을 개발하고 싶습니다. 이는 단순히 직책으로서의 리더가 아닌, 기술적 방향을 제시하고 팀원들의 성장을 이끌어낼 수 있는 진정한 리더십을 의미합니다. 좋은 테크 리더는 기술적 결정을 내릴 때 팀의 의견을 수렴하고, 각 팀원의 강점을 살릴 수 있는 과제를 배분하며, 어려운 문제가 생겼을 때 함께 해결책을 찾아가는 과정을 이끌어갑니다. 또한 팀의 기술 부채를 관리하고, 장기적인 기술 로드맵을 그릴 수 있어야 합니다. 이런 역량을 키우기 위해 주도적으로 프로젝트를 진행하고, 다양한 의견을 조율하는 경험을 쌓아가려 합니다.
 
